@@ -1,0 +1,121 @@
+<html><body>
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="help">Verwenden des Hilfesystems</a></h3>
+
+Die Online-Hilfe des Bootloaders ist kontextsensitiv. Sie gibt Informationen
+zum gewählten Menüpunkt aus und versucht beim Bearbeiten von
+Bootoptionen, Informationen zur jeweiligen Option auszugeben, auf der der Cursor sich befindet.<br>
+<br>
+Navigationstasten<br><br>
+
+  <em>Pfeil nach oben</em>: vorherigen Link markieren<br>
+  <em>Peil nach unten</em>: nächsten Link markieren<br>
+  <em>Linker Pfeil</em>, <em>Backspace</em>: zu vorheriger Option zurückgehen<br>
+  <em>Rechter Pfeil</em>, <em>Enter</em>, <em>Leertaste</em>: Link folgen<br>
+  <em>Bild nach oben</em>: eine Seite nach oben scrollen<br>
+  <em>Bild nach unten</em>: eine Seite nach unten scrollen<br>
+  <em>Home</em>: zur Startseite gehen<br>
+  <em>Ende</em>: zum Seitenende gehen<br>
+  <em>Esc</em>: Hilfe verlassen<br>
+
+<br>Zurück zu den <a href="#opt">Bootoptionen</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="startup">Splash-Modus-Auswahl</a></h3>
+
+Mit <em>F3</em> können Sie den Splash-Screen-Modus ändern. Falls
+gewünscht, können Sie die Kernel-Option <a href="#o_splash">Splash</a>
+direkt verwenden.<br>
+<br>
+<em>native</em> schaltet den Splash-Screen aus (wie splash=0)<br>
+<br>
+<em>silent</em> unterdrückt alle Kernel- und Boot-Meldungen und zeigt
+stattdessen eine Fortschrittsanzeige an<br>
+<br>
+<em>verbose</em> zeigt nettes Bild und Kernel- und Boot-Meldungen<br>
+
+<br>Zurück zu den <a href="#opt">Bootoptionen</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="opt">Bootoptionen</a></h3>
+
+  <a href="#o_splash">splash</a> -- beeinflusst das Verhalten des Splash-Screens<br>
+  <a href="#o_apm">apm</a> -- Power-Management umschalten<br>
+  <a href="#o_acpi">acpi</a> -- erweiterte Konfigurations- und Power-Schnittstelle<br>
+  <a href="#o_ide">ide</a> -- Steuern des IDE-Subsystems<br>
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_splash">Kernel-Optionen: splash</a></h3>
+
+Der Splash-Screen ist das beim Systemstart angezeigte Bild.<br>
+<br>
+<em>splash=0</em><br>
+Der Splash-Screen ist abgeschaltet. Dies mag für sehr alte Monitore
+nützlich sein oder beim Auftreten von Fehlern.<br>
+<br>
+<em>splash=verbose</em><br> Aktiviert Splash; Kernel- Und Boot-Meldungen werden
+weiterhin angezeigt.<br>
+<br>
+<em>splash=silent</em><br>
+Aktiviert Splash, jedoch keine Meldungen. Stattdessen wird eine
+Fortschrittsanzeige angezeigt.<br>
+<br>
+Zurück zu den <a href="#opt">Bootoptionen</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_apm">Kernel-Optionen: apm</a></h3>
+
+APM ist eine der beiden Power-Management-Möglichkeiten, die derzeit auf
+aktuellen Rechnern verwendet werden. Es wird hauptsächlich für
+Laptop-Funktionen wie Suspend to Disk verwendet. Es kann jedoch auch zum Ausschalten
+des Rechners nach dem Herunterfahren verwendet werden. APM hängt von einem
+funktionierenden BIOS ab. Ist das BIOS defekt, kann APM möglicherweise nur
+begrenzt eingesetzt werden oder den Rechner sogar funktionsunfähig
+machen. Deshalb kann es mit dem Parameter<br><br>
+
+  <em>apm=off</em>  -- APM komplett abschalten<br><br>
+
+Einige sehr neue Rechner könnten mehr Nutzen aus dem aktuelleren 
+<a href="#o_acpi">ACPI</a> ziehen.
+
+<br><br>Zurück zu den <a href="#opt">Bootoptionen</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_acpi">Kernel-Optionen: acpi</a></h3>
+
+ACPI (Advanced Configuration and Power Interface) ist ein Standard, der Power-
+und Konfigurations-Management-Schnittstellen zwischen einem Betriebssystem und
+dem BIOS definiert. Standardmäßig wird <em>acpi</em> angeschaltet,
+wenn ein neueres BIOS als das vom Jahr 2000 erkannt wird. Es gibt verschiedene
+gebräuchliche Parameter zum Steuern des Verhaltens von ACPI:<br>
+<br>
+  <em>pci=noacpi</em> -- ACPI nicht zum Weiterleiten von PCI-Interrupts verwenden<br>
+  <em>acpi=oldboot</em> -- nur die ACPI-Bereiche, die für den Systemstart relevant sind, bleiben aktiv<br>
+  <em>acpi=off</em> -- ACPI komplett abschalten<br>
+  <em>acpi=force</em> -- ACPI sogar dann anschalten, wenn Ihr BIOS vor dem Jahr 2000 datiert ist<br>
+<br>
+Besonders auf neuen Rechnern ersetzt es das alte <a href="#o_apm">apm</a>-System.
+
+
+<br><br>Zurück zu den <a href="#opt">Bootoptionen</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_ide">Kernel-Optionen: ide</a></h3>
+ 
+IDE wird, anders wie SCSI, häufig in den meisten Desktop-Workstations
+verwendet. Um einige Hardware-Probleme zu umgehen, die unter IDE-Systemen
+auftreten, verwenden Sie den Kernel-Parameter: <br><br> 
+
+  <em>ide=nodma</em>  -- DMA für IDE-Treiber abschalten<br>
+
+
+
+<br><br>Zurück zu den <a href="#opt">Bootoptionen</a>.
+
+</body></html>
