@@ -1,0 +1,124 @@
+<html><body>
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="help">Using the Help System</a></h3>
+
+The boot loader online help is context sensitive. It gives information
+about the selected menu item or, if you are editing boot options,
+it tries to look up information about the option in which the cursor is
+positioned.<br>
+<br>
+Navigation Keys<br><br>
+
+  <em>Up Arrow</em>: highlight previous link<br>
+  <em>Down Arrow</em>: highlight next link<br>
+  <em>Left Arrow</em>, <em>Backspace</em>: return to previous topic<br>
+  <em>Right Arrow</em>, <em>Enter</em>, <em>Space</em>: follow link<br>
+  <em>Page Up</em>: scroll up one page<br>
+  <em>Page Down</em>: scroll down one page<br>
+  <em>Home</em>: go to page start<br>
+  <em>End</em>: go to page end<br>
+  <em>Esc</em>: leave help<br>
+
+<br>Return to <a href="#opt">Boot Options</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="startup">Splash Mode Selection</a></h3>
+
+<em>F3</em> lets you change the splash screen mode. You can
+use the <a href="#o_splash">splash</a> kernel option directly, if you prefer.<br>
+<br>
+<em>native</em> turns the splash screen off (same as splash=0)<br>
+<br>
+<em>silent</em> suppresses all kernel and boot messages and shows a progress
+bar instead<br>
+<br>
+<em>verbose</em> shows nice picture and kernel and boot messages<br>
+
+<br>Return to <a href="#opt">Boot Options</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="opt">Boot Options</a></h3>
+
+  <a href="#o_splash">splash</a> -- influence the behavior of the splash screen<br>
+  <a href="#o_apm">apm</a> -- toggle power management<br>
+  <a href="#o_acpi">acpi</a> -- advanced configuration and power interface<br>
+  <a href="#o_ide">ide</a> -- control the IDE subsystem<br>
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_splash">Kernel Options: splash</a></h3>
+
+The splash screen is the picture shown during system start-up.<br>
+<br>
+<em>splash=0</em><br>
+The splash screen is switched off. This may be useful
+with very old monitors or if some error occurs.<br>
+<br>
+<em>splash=verbose</em><br> Activates splash, kernel and boot messages are 
+still shown.<br>
+<br>
+<em>splash=silent</em><br>
+Activates splash, but no messages. Instead a progress bar is drawn.<br>
+<br>
+Return to <a href="#opt">Boot Options</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_apm">Kernel Options: apm</a></h3>
+
+APM is one of the two power management strategies used on current
+computers. It is mainly used with laptops for functions like suspend
+to disk, but it may also be responsible for switching off the
+computer after power down. APM relies on a correct working BIOS. If
+the BIOS is broken, APM may have only limited use or even prevent the
+computer from working. Therefore, it may be switched off with the
+parameter<br><br>
+
+  <em>apm=off</em>  -- switch off APM completely<br><br>
+
+Some very new computers may benefit more from the newer
+<a href="#o_acpi">ACPI</a>.
+
+<br><br>Return to <a href="#opt">Boot Options</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_acpi">Kernel Options: acpi</a></h3>
+
+ACPI (Advanced Configuration and Power Interface) is a
+standard that defines power and configuration management interfaces
+between an operating system and the BIOS. By default, <em>acpi</em> is
+switched on when a BIOS is detected that is newer than from year
+2000. There are several commonly
+used parameters to control the behavior of ACPI:<br>
+<br>
+  <em>pci=noacpi</em> -- do not use ACPI to route PCI interrupts
+  <em>acpi=oldboot</em> -- only the parts of ACPI that are relevant
+for booting remain activated<br>
+  <em>acpi=off</em> -- switch off ACPI completely<br>
+  <em>acpi=force</em> -- switch on ACPI even if your BIOS is dated
+before 2000<br>
+<br>
+Especially on new computers, it replaces the old
+<a href="#o_apm">apm</a> system.
+
+
+<br><br>Return to <a href="#opt">Boot Options</a>
+
+
+<hr><!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<h3><a name="o_ide">Kernel Options: ide</a></h3>
+
+IDE is, unlike SCSI, commonly used in most desktop workstations.
+To circumvent some hardware problems that occur with IDE systems, use the
+kernel parameter: <br><br> 
+
+  <em>ide=nodma</em>  -- switch off dma for IDE drives<br>
+
+
+
+<br><br>Return to <a href="#opt">Boot Options</a>.
+
+</body></html>
