@@ -52,7 +52,7 @@
   xmenu .xm_current get dup .inst_cdrom eq exch .inst_slp eq or {
     /install.last xmenu .xm_current get def
 
-    install.option install.last .inst_cdrom eq { "" } { "install=slp" } ifelse strcpy
+    install.option install.last .inst_cdrom eq { "" } { "install=slp://" } ifelse strcpy
 
     /window.action actRedrawPanel def
 
