@@ -1,3 +1,9 @@
+8/4/2004:	v2.4.18
+	- use 'install=slp://' (#36982)
+	- add new 'biosmem' function
+	- live cd layout changes
+	- added live cd warning if there's not enough memory
+
 7/4/2004:	v2.4.17
 	- add SuSE-Live theme
 
